Set Lilypond PDF Preview as default PDF viewer for this project.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "vslilypond.compilation.compileMainFileOnSave": false,
-    "vslilypond.compilation.compileOnSave": false
+    "vslilypond.compilation.compileOnSave": false,
+    "workbench.editor.defaultBinaryEditor": "default",
+    "workbench.editorAssociations": {
+        "*.pdf": "lilypond.pdf.preview"
+    }
 }
